src/objects/Invoice_Header__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <defaultValue>&apos;Campus Direct UK (Pvt) Limited&apos;</defaultValue>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_No__c</fullName>
        <defaultValue>Text(27015000182)</defaultValue>
        <label>Account No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_of_Company__c</fullName>
        <defaultValue>&apos;No 110, Level 02, Elvitigala Mawatha, Colombo 08.&apos;</defaultValue>
        <label>Address of Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <defaultValue>&apos;67, D.S Senanayake Mawatha,Borella Colombo 08,SriLanka&apos;</defaultValue>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <defaultValue>&apos;Nations Trust Bank&apos;</defaultValue>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Type_F__c</fullName>
        <formula>Text(Currency_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <inlineHelpText>Currency Type of the invoice</inlineHelpText>
        <label>Currency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AFN</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AWG</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BIF</fullName>
                </value>
                <value>
                    <fullName>BMD</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BWP</fullName>
                </value>
                <value>
                    <fullName>BYN</fullName>
                </value>
                <value>
                    <fullName>BZD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDF</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intake_Month__c</fullName>
        <label>Intake Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intake_Year__c</fullName>
        <label>Intake Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_for_University__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Invoice for University</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Company__c</fullName>
        <defaultValue>&apos;Campus Direct UK(Pvt)Ltd&apos;</defaultValue>
        <label>Name of Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Invoice_Amount__c</fullName>
        <formula>Total_Additions__c  -  Total_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDF_File_Version_Number__c</fullName>
        <label>PDF File Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swift_Code__c</fullName>
        <defaultValue>&apos;NTBCLKLX&apos;</defaultValue>
        <label>Swift Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Additions__c</fullName>
        <label>Total Additions</label>
        <summarizedField>Invoice_Item__c.Net_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Item__c.Invoice_Item_Type__c</field>
            <operation>equals</operation>
            <value>Addition</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Item__c.Invoice_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Deduction__c</fullName>
        <label>Total Deduction</label>
        <summarizedField>Invoice_Item__c.Net_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Item__c.Invoice_Item_Type__c</field>
            <operation>equals</operation>
            <value>Deduction</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Item__c.Invoice_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_for_University__c</columns>
        <columns>Intake_Month__c</columns>
        <columns>Intake_Year__c</columns>
        <columns>University__c</columns>
        <columns>Net_Invoice_Amount__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CDUK/INV{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>Other_Invoice</fullName>
        <active>true</active>
        <description>This Invoice type will use for Non University invoices</description>
        <label>Other Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Invoice</fullName>
        <active>true</active>
        <description>This Invoice type will use for University invoices</description>
        <label>University Invoice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Invoice_for_University_Check</fullName>
        <active>false</active>
        <description>Intake Year and Intake Month is Mandatory if Invoice for University is Checked.</description>
        <errorConditionFormula>AND(
   Invoice_for_University__c == True,
    OR(
        ISBLANK(Intake_Year__c)
        ,ISPICKVAL( Intake_Month__c ,&quot;&quot;)
        ) 
     
)</errorConditionFormula>
        <errorDisplayField>Invoice_for_University__c</errorDisplayField>
        <errorMessage>Intake Month and Intake Year should not be Empty, if Invoice for University is Checked</errorMessage>
    </validationRules>
</CustomObject>